--- a/src/main/resources/templates/addProduct.html
+++ b/src/main/resources/templates/addProduct.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<html lang="en" xmlns:th="http://www/thymeleaf.org">
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -28,21 +29,22 @@
             <div class="col-lg-12">
                 <div class="login_form_inner register_form_inner">
                     <h3>Add a product</h3>
-                    <form class="row login_form" action="/addProduct" method="post" id="register_form" >
+
+                    <form th:object="${productDto}" class="row login_form" action="/addProduct" method="post" id="register_form" >
                         <div class="col-md-12 form-group">
-                            <input type="text" class="form-control" id="productName" name="productName" placeholder="Product name" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Product name'">
+                            <input th:field="*{name}" type="text" class="form-control" id="productName" name="productName" placeholder="Product name" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Product name'">
                         </div>
                         <div class="col-md-12 form-group">
-                            <input type="text" class="form-control" id="price" name="price" placeholder="Price" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Price'">
+                            <input th:field="*{price}" type="text" class="form-control" id="price" name="price" placeholder="Price" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Price'">
                         </div>
                         <div class="col-md-12 form-group">
-                            <input type="text" class="form-control" id="category" name="category" placeholder="Category" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Category'">
+                            <input th:field="*{category}"  type="text" class="form-control" id="category" name="category" placeholder="Category" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Category'">
                         </div>
                         <div class="col-md-12 form-group">
-                            <input type="text" class="form-control" id="quantity" name="quantity" placeholder="Quantity" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Quantity'">
+                            <input th:field="*{quantity}" type="text" class="form-control" id="quantity" name="quantity" placeholder="Quantity" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Quantity'">
                         </div>
                         <div class="col-md-12 form-group">
-                            <input type="text" class="form-control" id="description" name="description" placeholder="Description" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Description'">
+                            <input th:field="*{description}" type="text" class="form-control" id="description" name="description" placeholder="Description" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Description'">
                         </div>
                         <div class="col-md-12 form-group">
 
