--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -34,12 +34,13 @@
             <div class="col-lg-6">
                 <div class="login_form_inner register_form_inner">
                     <h3>Create an account</h3>
-                    <form th:object="${registrationDto}" class="row login_form" action="/registration" method="post" id="register_form" >
+                    <form th:object="${registrationDto}" class="row login_form" action="/registration" method="POST" id="register_form" >
                         <div class="col-md-12 form-group">
                             <input th:field="*{fullName}" type="text" class="form-control" id="fullName" name="fullName" placeholder="Full Name" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Full Name'">
                         </div>
                         <div class="col-md-12 form-group">
                             <input th:field="*{emailAddress}" type="text" class="form-control" id="email" name="email" placeholder="Email Address" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Email Address'">
+                            <p th:each="error : ${#fields.errors('emailAddress')}" th:text="${error}"></p>
                         </div>
                         <div class="col-md-12 form-group">
                             <input th:field="*{address}" type="text" class="form-control" id="address" name="address" placeholder="Address" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Address'">
@@ -48,10 +49,10 @@
                             <input th:field="*{phoneNumber}" type="text" class="form-control" id="phoneNumber" name="phoneNumber" placeholder="Phone Number" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Phone Number'">
                         </div>
                         <div class="col-md-12 form-group">
-                            <input th:field="*{password}" type="text" class="form-control" id="password" name="password" placeholder="Password" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Password'">
+                            <input th:field="*{password}" type="password" class="form-control" id="password" name="password" placeholder="Password" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Password'">
                         </div>
                         <div class="col-md-12 form-group">
-                            <input th:field="*{confirmPassword}" type="text" class="form-control" id="confirmPassword" name="confirmPassword" placeholder="Confirm Password" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Confirm Password'">
+                            <input th:field="*{confirmPassword}" type="password" class="form-control" id="confirmPassword" name="confirmPassword" placeholder="Confirm Password" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Confirm Password'">
                         </div>
                         <div class="col-md-12 form-group">
                             <select th:field="*{userRole}"  class="form-control" id="userRole" name="userRole">
