adaugat checkout si confirmOrder

--- a/src/main/resources/templates/viewProduct.html
+++ b/src/main/resources/templates/viewProduct.html
@@ -20,7 +20,7 @@
     <link rel="stylesheet" href="/css/custom.css">
 </head>
 <body>
-<div th:insert="fragments/menu :: menu"></div>
+<div th:insert="~{fragments/menu :: menu}"></div>
 <!--================Single Product Area =================-->
 <div class="product_image_area">
     <div class="container">
