--- a/src/main/resources/templates/addProduct.html
+++ b/src/main/resources/templates/addProduct.html
@@ -1,10 +1,8 @@
 <!DOCTYPE html>
-
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>AddProduct</title>
-
 
     <link rel="icon" href="img/Fevicon.png" type="image/png">
     <link rel="stylesheet" href="vendors/bootstrap/bootstrap.min.css">
@@ -17,12 +15,11 @@
     <link rel="stylesheet" href="vendors/nouislider/nouislider.min.css">
 
     <link rel="stylesheet" href="css/style.css">
-
     <link rel="stylesheet" href="css/custom.css">
 
 </head>
 <body>
-<div th:insert="fragments/menu :: menu"></div>
+<div th:insert="~{fragments/menu :: menu}"></div>
 <!--================Login Box Area =================-->
 <section class="login_box_area section-margin">
     <div class="container">
@@ -30,6 +27,7 @@
             <div class="col-lg-6" style="margin: 0 auto;">
                 <div class="login_form_inner register_form_inner">
                     <h3>Add a product</h3>
+
                     <form th:object="${productDto}" class="row login_form" action="/addProduct" method="post" id="register_form" enctype="multipart/form-data">
                         <div class="col-md-12 form-group">
                             <input th:field="*{name}" type="text" class="form-control" id="productName" name="productName" placeholder="Product name" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Product name'">
