--- a/src/main/resources/templates/checkout.html
+++ b/src/main/resources/templates/checkout.html
@@ -2,10 +2,11 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Checkout</title>
 
 
-    <link rel="icon" href="img/Fevicon.png" type="image/png">
+    <link rel="icon" href="img/Fevicon/view.png" type="image/png">
+
     <link rel="stylesheet" href="vendors/bootstrap/bootstrap.min.css">
     <link rel="stylesheet" href="vendors/fontawesome/css/all.min.css">
     <link rel="stylesheet" href="vendors/themify-icons/themify-icons.css">
@@ -20,8 +21,10 @@
     <link rel="stylesheet" href="css/custom.css">
 </head>
 <body>
-<!--================Checkout Area =================-->
 <div th:insert="fragments/menu :: menu"></div>
+
+<!--================Checkout Area =================-->
+
 <section class="checkout_area section-margin--small">
     <div class="container">
         <div class="billing_details">
@@ -38,7 +41,8 @@
                             <span class="placeholder" data-placeholder="Last name"></span>
                         </div>
                         <div class="col-md-12 form-group">
-                            <input type="text" class="form-control" id="company" name="company" placeholder="Company name">
+                            <input type="text" class="form-control" id="company" name="company"
+                                   placeholder="Company name">
                         </div>
                         <div class="col-md-6 form-group p_star">
                             <input type="text" class="form-control" id="number" name="number">
@@ -89,7 +93,8 @@
                                 <input type="checkbox" id="f-option3" name="selector">
                                 <label for="f-option3">Ship to a different address?</label>
                             </div>
-                            <textarea class="form-control" name="message" id="message" rows="1" placeholder="Order Notes"></textarea>
+                            <textarea class="form-control" name="message" id="message" rows="1"
+                                      placeholder="Order Notes"></textarea>
                         </div>
                     </form>
                 </div>
@@ -99,24 +104,22 @@
                         <form method="post" action="/confirmation">
                             <ul class="list">
                                 <li><a href="#"><h4>Product <span>Total</span></h4></a></li>
-                                <li th:each="selectedProductDto: ${shoppingCartDto.selectedProductDtos}">
+                                <li th:each="selectedProductDto:${shoppingCartDto.selectedProductDtos}">
                                     <a href="#">
-                                        <span th:text="${selectedProductDto.name}" style="float: left" ></span>
-                                        <span class="middle" th:text="${'x ' + selectedProductDto.quantity}" ></span>
-                                        <span class="last" th:text="${'$ ' + selectedProductDto.priceTimesQuantity}"></span>
+                                        <span th:text="${selectedProductDto.name}" style="float: left;"></span>
+                                        <span th:text="${'x ' + selectedProductDto.quantity}" class="middle"></span>
+                                        <span th:text="${'$ ' + selectedProductDto.priceTimesQuantity}"
+                                              class="last"></span>
                                     </a>
                                 </li>
                             </ul>
                             <ul class="list list_2">
-                                <li><a href="#">Subtotal <span th:text="${'$ ' + shoppingCartDto.subtotal}"></span></a></li>
-                                <li><a href="#">Shipping <span>Flat rate: <span th:text="${'$ ' + shoppingCartDto.shipping}"></span></span></a></li>
-                                <li><a href="#">Total <span th:text="${'$ ' + shoppingCartDto.total}"></span></a></li>
+                                <li><a href="#">Subtotal <span th:text="${'$' + shoppingCartDto.subtotal}"></span></a>
+                                </li>
+                                <li><a href="#">Shipping <span>Flat rate: <span
+                                        th:text="${'$' + shoppingCartDto.shipping}"></span></span></a></li>
+                                <li><a href="#">Total <span th:text="${'$' + shoppingCartDto.total}"></span></a></li>
                             </ul>
-                            <div class="creat_account">
-                                <input type="checkbox" id="f-option4" name="selector">
-                                <label for="f-option4">I've read and accept the </label>
-                                <button href="#">terms & conditions*</button>
-                            </div>
                             <div class="text-center">
                                 <button type="submit" class="button button-paypal" href="#">Launch order</button>
                             </div>
