--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -27,7 +27,7 @@
                 <div class="login_box_img">
                     <div class="hover">
                         <h4>New to our website?</h4>
-                        <p>There are advances being made in science and technology everyday, and a good example of this is the</p>
+                        <p>No problem , just </p>
                         <a class="button button-account" href="/registration">Create an Account</a>
                     </div>
                 </div>
