--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -27,7 +27,7 @@
                 <div class="login_box_img">
                     <div class="hover">
                         <h4>Already have an account?</h4>
-                        <p>There are advances being made in science and technology everyday, and a good example of this is the</p>
+                        <p>No need to register , just: </p>
                         <a class="button button-account" href="/login">Login Now</a>
                     </div>
                 </div>
