--- a/src/main/resources/templates/viewProduct.html
+++ b/src/main/resources/templates/viewProduct.html
@@ -6,6 +6,7 @@
     <title>ViewProduct</title>
 
     <link rel="icon" href="/img/Fevicon.png" type="image/png">
+
     <link rel="stylesheet" href="/vendors/bootstrap/bootstrap.min.css">
     <link rel="stylesheet" href="/vendors/fontawesome/css/all.min.css">
     <link rel="stylesheet" href="/vendors/themify-icons/themify-icons.css">
@@ -47,10 +48,10 @@
                         <form th:object="${selectedProductDto}" th:action="@{/product/{y}/{x}(x=${productDto.id},y=${productDto.name})}"  method="post">
                         <label for="qty">Quantity:</label>
                         <button onclick="var result = document.getElementById('sst'); var sst = result.value; if( !isNaN( sst )) result.value++;return false;"
-                                class="increase items-count" type="button"><i class="ti-angle-left"></i></button>
+                                class="increase items-count" type="button"><i class="ti-angle-up"></i></button>
                         <input th:field="*{quantity}" type="text" name="qty" id="sst" size="2" maxlength="12" value="1" title="Quantity:" class="input-text qty">
                         <button onclick="var result = document.getElementById('sst'); var sst = result.value; if( !isNaN( sst ) &amp;&amp; sst > 0 ) result.value--;return false;"
-                                class="reduced items-count" type="button"><i class="ti-angle-right"></i></button>
+                                class="reduced items-count" type="button"><i class="ti-angle-down"></i></button>
                         <button class="button primary-btn" type="submit">Add to Cart</button>
                         </form>
                     </div>
